# Penny

./: README.md  penny-loader.js  render.yaml
backend/: .gitignore  alembic.ini  auth.py  database.py  main.py  models.py  pyproject.toml  schemas.py  test_user.py
backend/alembic/: env.py
backend/alembic/versions/: 09995bc3a021_add_profile_and_reports.py  80a975002917_initial_setup.py  95fe626bccef_assets_v2_and_user_currency.py  a7fe2f49b80f_create_initial_tables.py  dbf12b560841_add_loan_emi_and_monthly_salary.py
backend/routers/: assets.py  expenses.py  reports.py  users.py
backend/services/: ai_reports.py  summaries.py
backend/tests/: test_assets.py  test_reports.py  test_users.py
client/: vitest.config.ts
client/src/app/: globals.css  landing.css  layout.tsx  page.tsx
client/src/components/: AppSidebar.tsx  AssetForm.tsx  AssetSearch.tsx  AuthForm.tsx  CategoryDonut.tsx  CurrencySelect.tsx  LandingNav.tsx  PennyLandingScripts.tsx  (+4 more)
frontend/: package.json
frontend/src/: proxy.ts
penny/: penny-tweaks.jsx  penny.js
server/: database.py  models.py  pyproject.toml  schemas.py
server/alembic/: env.py
server/alembic/versions/: 7ac002b6ac0c_add_expenses_table.py  a1b2c3d4e5f6_assets_symbol_account_priced_at.py  b2c3d4e5f6a7_add_user_base_currency.py
server/routers/: assets.py  expenses.py  rates.py  users.py
server/services/: ai_reports.py  money.py  pricing.py  summaries.py
server/tests/: conftest.py  test_assets.py  test_auth.py  test_expenses.py  test_pricing.py  test_users.py
template/: .thumbnail  Penny Landing Page.html  penny.css
(+52 files in other folders)
